feat(script): add script to create registration tokens (#178)
